<resources>
    <string name="app_name">Apps for Good</string>

    <string name="title_activity_word">WordActivity</string>
    =========
    <string name="title_activity_home_page">HomePage</string>
    >>>>>>>>> Temporary merge branch 2
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="VocabliStr">Vocabli</string>
    <string name="ParentStr">Parental Settings</string>
    <string name="NewWord">New Word:</string>
    <string name="GuidedStr">Guided Mode</string>
    <string name="CreativeStr">Learning Mode</string>
    <string name="Question1">Question 1</string>
    <string name="Question2">Question 2</string>
    <string name="Question">Question</string>
    <string name="Activity">Related Activity:</string>
    <string name="ReplaceQuestion">Question:</string>
    <string name="ReplaceActivity">Activity</string>
    <string name="Word">Word</string>
    <string name="Next">Next</string>
    <string name="AddWord">Add Word:</string>
    <string name="ImageUpload">Upload Image:</string>
    <string name="VocabHeading">Update Vocab List</string>
    <string name="Settings">Settings</string>
    <string name="UploadImage">Upload Image</string>
    <string name="Stats">View Progress</string>
    <string name="EditCategories">Edit Categories</string>
    <string name="Categories">Categories</string>
    <string name="addword">AddWord</string>
    <string name="EditWords">Edit Words</string>
    <string name="Words">Words</string>
    <string name="DeleteWord">Delete Word</string>
    <string name="Tags">Tags:</string>
    <string name="c1">Tag 1</string>
    <string name="c2">Tag 2</string>
    <string name="c3">Tag 3</string>
    <string name="add">To add word</string>
    <string name="Upload1">Upload Image 1</string>
    <string name="Upload2">Upload Image 2</string>
    <string name="Upload3">Upload Image 3</string>
    <string name="UploadImages">Upload Images</string>
    <string name="done">Done</string>
    <string name="tag">A tag</string>
    <string name="name">Category Name</string>
    <string name="SelectC">Select Category:</string>
    <string name="noCat">No Category</string>
    <string name="Rt">Return Home</string>
</resources>